[oc] update from Pootle (firefox)

--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -194,6 +194,7 @@ sanitizeSelectedWarning=Tot l'istoric serà escafat.
 # LOCALIZATION NOTE (downloadAndInstallButton.label): %S is replaced by the
 # version of the update: "Update to 28.0".
 update.downloadAndInstallButton.label=Metre a jorn %S
+update.downloadAndInstallButton.accesskey=U
 
 # RSS Pretty Print
 feedShowFeedNew=u
