--- a/browser/chrome/browser/devtools/appcacheutils.properties
+++ b/browser/chrome/browser/devtools/appcacheutils.properties
@@ -63,41 +63,50 @@ noResults=Vòstra recèrca a pas tornat cap de resultat.
 
 # LOCALIZATION NOTE (cacheDisabled): it's used when the cache is disabled and
 # an attempt is made to view offline data.
+cacheDisabled=L'escondedor de disc es desactivat. Definissètz browser.cache.disk.enable a true dins about:config puèi ensajatz tornarmai.
 
 # LOCALIZATION NOTE (firstLineMustBeCacheManifest): the associated cache
 # manifest has a first line that is not "CACHE MANIFEST". Parameters: %S is
 # the line number.
+firstLineMustBeCacheManifest=La primièra linha del manifèste deu èsser « CACHE MANIFEST » a la linha %S.
 
 # LOCALIZATION NOTE (cacheManifestOnlyFirstLine2): the associated cache
 # manifest has "CACHE MANIFEST" on a line other than the first line.
 # Parameters: %S is the line number where "CACHE MANIFEST" appears.
+cacheManifestOnlyFirstLine2=« CACHE MANIFEST » es valid unicament a la primièra linha mas es estat trobat a la linha %S.
 
 # LOCALIZATION NOTE (asteriskInWrongSection2): the associated cache manifest
 # has an asterisk (*) in a section other than the NETWORK section. Parameters:
 # %1$S is the section name, %2$S is the line number.
+asteriskInWrongSection2=Utilizacion incorrècta de l'asterisc (*) dins la seccion %1$S a la linha %2$S. Se una linha de la seccion NETWORK conten un unic asterisc, alara tot URI pas listat dins lo manifèste serà tractat coma se l'URI èra listat dins la seccion NETWORK. Dins lo cas contrari, aqueles URI seràn considerats coma indisponibles. Tota autra utilizacion del caractèr * es interdicha.
 
 # LOCALIZATION NOTE (escapeSpaces): the associated cache manifest has a space
 # in a URI. Spaces must be replaced with %20. Parameters: %S is the line
 # number where this error occurs.
+escapeSpaces=Los espacis dins los URI an besonh d'èsser remplaçats per %20 a la linha %S.
 
 # LOCALIZATION NOTE (slashDotDotSlashBad): the associated cache manifest has a
 # URI containing /../, which is invalid. Parameters: %S is the line number
 # where this error occurs.
+slashDotDotSlashBad=/../ es pas un prefixe URI valid a la linha %S.
 
 # LOCALIZATION NOTE (tooManyDotDotSlashes): the associated cache manifest has
 # a URI containing too many ../ operators. Too many of these operators mean
 # that the file would be below the root of the site, which is not possible.
 # Parameters: %S is the line number where this error occurs.
+tooManyDotDotSlashes=Tròp d'operadors punt punt barra oblica (../) a la linha %S.
 
 # LOCALIZATION NOTE (fallbackUseSpaces): the associated cache manifest has a
 # FALLBACK section containing more or less than the standard two URIs
 # separated by a single space. Parameters: %S is the line number where this
 # error occurs.
+fallbackUseSpaces=Sols dos URI separats per d'espacis son autorizats dins la seccion FALLBACK a la linha %S.
 
 # LOCALIZATION NOTE (fallbackAsterisk2): the associated cache manifest has a
 # FALLBACK section that attempts to use an asterisk (*) as a wildcard. In this
 # section the URI is simply a path prefix. Parameters: %S is the line number
 # where this error occurs.
+fallbackAsterisk2=Utilizacion incorrècta de l'asterisc (*) dins la seccion FALLBACK a la linha %S. Las URI de la seccion FALLBACK devon simplament correspondre a un prefixe de l'URI de requèsta.
 
 # LOCALIZATION NOTE (settingsBadValue): the associated cache manifest has a
 # SETTINGS section containing something other than the valid "prefer-online"
@@ -107,6 +116,7 @@ settingsBadValue=La seccion SETTINGS pòt pas conténer qu'una sola valor, « pr
 # LOCALIZATION NOTE (invalidSectionName): the associated cache manifest
 # contains an invalid section name. Parameters: %1$S is the section name, %2$S
 # is the line number.
+invalidSectionName=Nom de seccion (%S) incorrècte a la linha %S.
 
 # LOCALIZATION NOTE (entryNotFound): the requested cache entry that does not
 # exist.
