--- a/browser/chrome/browser/devtools/debugger.properties
+++ b/browser/chrome/browser/devtools/debugger.properties
@@ -51,9 +51,11 @@ resumeButtonTooltip=Contunhar (%S)
 
 # LOCALIZATION NOTE (startTracingTooltip): The label that is displayed on the trace
 # button when execution tracing is stopped.
+startTracingTooltip=Clicar per aviar l'enregistrament de las traças
 
 # LOCALIZATION NOTE (stopTracingTooltip): The label that is displayed on the trace
 # button when execution tracing is started.
+stopTracingTooltip=Clicar per arrestar l'enregistrament de las traças
 
 # LOCALIZATION NOTE (stepOverTooltip): The label that is displayed on the
 # button that steps over a function call.
@@ -77,6 +79,7 @@ noSourcesText=Aquesta pagina a pas cap de font.
 
 # LOCALIZATION NOTE (noEventListenersText): The text to display in the events tab
 # when there are no events.
+noEventListenersText=Pas cap d'escotador d'eveniment d'afichar
 
 # LOCALIZATION NOTE (noStackFramesText): The text to display in the call stack tab
 # when there are no stack frames.
@@ -84,12 +87,15 @@ noStackFramesText=Pas cap de pila d'afichar.
 
 # LOCALIZATION NOTE (noStackFramesText): The text to display in the traces tab
 # when there are no function calls.
+noFunctionCallsText=Pas cap d'apèl de foncion d'afichar
 
 # LOCALIZATION NOTE (tracingNotStartedText): The text to display in the traces tab
 # when when tracing hasn't started yet.
+tracingNotStartedText=L'enregistrament de las traças es pas aviat
 
 # LOCALIZATION NOTE (eventCheckboxTooltip): The tooltip text to display when
 # the user hovers over the checkbox used to toggle an event breakpoint.
+eventCheckboxTooltip=Activar/Desactivar l'arrèst sus aqueste eveniment
 
 # LOCALIZATION NOTE (eventOnSelector): The text to display in the events tab
 # for every event item, between the event type and event selector.
@@ -100,6 +106,7 @@ eventOnSelector=lo
 
 # LOCALIZATION NOTE (eventNodes): The text to display in the events tab when
 # an event is listened on more than one target node.
+eventNodes=%S nosèls
 
 # LOCALIZATION NOTE (eventNative): The text to display in the events tab when
 # a listener is added from plugins, thus getting translated to native code.
@@ -141,6 +148,7 @@ noMatchingStringsText=Cap de correspondéncia pas trobada
 
 # LOCALIZATION NOTE (emptySearchText): This is the text that appears in the
 # filter text box when it is empty and the scripts container is selected.
+emptySearchText=Recercar un escript (%S)
 
 # LOCALIZATION NOTE (emptyChromeGlobalsFilterText): This is the text that
 # appears in the filter text box when it is empty and the chrome globals
@@ -165,6 +173,7 @@ searchPanelGlobal=Recercar dins totes los fichièrs (%S)
 
 # LOCALIZATION NOTE (searchPanelFunction): This is the text that appears in the
 # filter panel popup for the function search operation.
+searchPanelFunction=Recercar una definicion de foncion (%S)
 
 # LOCALIZATION NOTE (searchPanelToken): This is the text that appears in the
 # filter panel popup for the token search operation.
@@ -198,6 +207,7 @@ loadingText=Cargament...
 
 # LOCALIZATION NOTE (errorLoadingText): The text that is displayed in the debugger
 # viewer when there is an error loading a file
+errorLoadingText=Error al moment del cargament de la font :\n
 
 # LOCALIZATION NOTE (addWatchExpressionText): The text that is displayed in the
 # watch expressions list to add a new item.
@@ -205,6 +215,7 @@ addWatchExpressionText=Apondre una expression espiona
 
 # LOCALIZATION NOTE (addWatchExpressionButton): The button that is displayed in the
 # variables view popup.
+addWatchExpressionButton=Espionar
 
 # LOCALIZATION NOTE (emptyVariablesText): The text that is displayed in the
 # variables pane when there are no variables to display.
@@ -227,6 +238,7 @@ globalScopeLabel=globala
 
 # LOCALIZATION NOTE (variablesViewErrorStacktrace): This is the text that is
 # shown before the stack trace in an error.
+variablesViewErrorStacktrace=Traça de la pila :
 
 # LOCALIZATION NOTE (variablesViewMoreObjects): the text that is displayed
 # when you have an object preview that does not show all of the elements. At the end of the list
@@ -235,6 +247,7 @@ globalScopeLabel=globala
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 number of remaining items in the object
 # example: 3 more…
+variablesViewMoreObjects=#1 de mai…;#1 de mai…
 
 # LOCALIZATION NOTE (variablesEditableNameTooltip): The text that is displayed
 # in the variables list on an item with an editable name.
@@ -255,6 +268,7 @@ variablesEditButtonTooltip=Clicar per definir la valor
 # LOCALIZATION NOTE (variablesEditableValueTooltip): The text that is displayed
 # in a tooltip on the "open in inspector" button in the the variables list for a
 # DOMNode item.
+variablesDomNodeValueTooltip=Clicar per seleccionar lo nosèl dins l'inspector
 
 # LOCALIZATION NOTE (configurable|...|Tooltip): The text that is displayed
 # in the variables list on certain variables or properties as tooltips.
@@ -264,6 +278,8 @@ variablesEditButtonTooltip=Clicar per definir la valor
 # https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Object/isFrozen
 # https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Object/isSealed
 # It's probably best to keep these in English.
+configurableTooltip=configurable
+enumerableTooltip=enumerable
 writableTooltip=modificabla
 frozenTooltip=gelada
 sealedTooltip=sagelada
@@ -289,3 +305,4 @@ functionSearchSeparatorLabel=←
 # open in separate tabs and the user tries to resume them in the wrong order.
 # The substitution parameter is the URL of the last paused window that must be
 # resumed first.
+resumptionOrderPanelTitle=I a un o mantun desbugador en pausa. D'en primièr, reprenètz lo desbugador mes a jorn lo mai recentament a : %S
