--- a/browser/chrome/browser/devtools/gclicommands.properties
+++ b/browser/chrome/browser/devtools/gclicommands.properties
@@ -417,44 +417,57 @@ dbgListSourcesDesc=Far la lista de las URL de las fonts cargadas dins lo desbuga
 
 # LOCALIZATION NOTE (dbgBlackBoxDesc) A very short string used to describe the
 # function of the 'dbg blackbox' command.
+dbgBlackBoxDesc=Plaçar totas las fonts del desbugador dins de bóstias negras
 
 # LOCALIZATION NOTE (dbgBlackBoxSourceDesc) A very short string used to describe the
 # 'source' parameter to the 'dbg blackbox' command.
+dbgBlackBoxSourceDesc=Una font especifica de levar de sa bóstia negra
 
 # LOCALIZATION NOTE (dbgBlackBoxGlobDesc) A very short string used to describe the
 # 'glob' parameter to the 'dbg blackbox' command.
+dbgBlackBoxGlobDesc=Plaçar dins de bóstias negras totas las fonts que correspondon a aqueste modèl (per exemple : « *.min.js »)
 
 # LOCALIZATION NOTE (dbgBlackBoxInvertDesc) A very short string used to describe the
 # 'invert' parameter to the 'dbg blackbox' command.
+dbgBlackBoxInvertDesc=Inversar las correspondéncias. Seràn plaçadas dins de bóstias negras totas las fonts que son pas ni la font provesida, ni las fonts que correspondon al modèl provesit.
 
 # LOCALIZATION NOTE (dbgBlackBoxEmptyDesc) A very short string used to let the
 # user know that no sources were black boxed.
+dbgBlackBoxEmptyDesc=(Cap de font pas plaçada en bóstia negra)
 
 # LOCALIZATION NOTE (dbgBlackBoxNonEmptyDesc) A very short string used to let the
 # user know which sources were black boxed.
+dbgBlackBoxNonEmptyDesc=Las fonts seguentas son estadas plaçadas dins de bóstias negras :
 
 # LOCALIZATION NOTE (dbgBlackBoxErrorDesc) A very short string used to let the
 # user know there was an error black boxing a source (whose url follows this
 # text).
+dbgBlackBoxErrorDesc=Error de mesa en bóstia negra :
 
 # LOCALIZATION NOTE (dbgUnBlackBoxDesc) A very short string used to describe the
 # function of the 'dbg unblackbox' command.
+dbgUnBlackBoxDesc=Levar las fonts del desbugador de las bóstias negras
 
 # LOCALIZATION NOTE (dbgUnBlackBoxSourceDesc) A very short string used to describe the
 # 'source' parameter to the 'dbg unblackbox' command.
+dbgUnBlackBoxSourceDesc=Una font especifica de levar de sa bóstia negra
 
 # LOCALIZATION NOTE (dbgUnBlackBoxGlobDesc) A very short string used to describe the
 # 'glob' parameter to the 'dbg blackbox' command.
+dbgUnBlackBoxGlobDesc=Levar de las bóstias negras totas las fonts que correspondon a aqueste modèl (per exemple : « *.min.js »)
 
 # LOCALIZATION NOTE (dbgUnBlackBoxEmptyDesc) A very short string used to let the
 # user know that we did not stop black boxing any sources.
+dbgUnBlackBoxEmptyDesc=(Cap de font pas levada de sa bóstia negra)
 
 # LOCALIZATION NOTE (dbgUnBlackBoxNonEmptyDesc) A very short string used to let the
 # user know which sources we stopped black boxing.
+dbgUnBlackBoxNonEmptyDesc=Las fonts seguentas son estadas levadas de las bóstias negras :
 
 # LOCALIZATION NOTE (dbgUnBlackBoxErrorDesc) A very short string used to let the
 # user know there was an error black boxing a source (whose url follows this
 # text).
+dbgUnBlackBoxErrorDesc=Error de levament de la bóstia negra :
 
 # LOCALIZATION NOTE (dbgUnBlackBoxInvertDesc) A very short string used to describe the
 # 'invert' parameter to the 'dbg unblackbox' command.
@@ -781,38 +794,50 @@ pagemodRemoveAttributeResult=Elements especificats per selector : %1$S. Atribut
 # LOCALIZATION NOTE (toolsDesc2) A very short description of the 'tools'
 # command, the parent command for tool-hacking commands.
 # The argument (%1$S) is the browser name.
+toolsDesc2=Chaupinar las aisinas de desvolopament de %1$S
 
 # LOCALIZATION NOTE (toolsManual2) A fuller description of the 'tools'
 # command. The argument (%1$S) is the browser name.
+toolsManual2=Divèrsas comandas que servisson a chaupinar las aisinas de desvolopament de %1$S
 
 # LOCALIZATION NOTE (toolsSrcdirDesc) A very short description of the 'tools srcdir'
 # command, for pointing your developer tools loader at a mozilla-central source tree.
+toolsSrcdirDesc=Cargar las aisinas dempuèi un checkout de mozilla-central
 
 # LOCALIZATION NOTE (toolsSrcdirNotFound) Shown when the 'tools srcdir' command was handed
 # an invalid srcdir.
+toolsSrcdirNotFound=%1$s existís pas o es pas un checkout de mozilla-central.
 
 # LOCALIZATION NOTE (toolsSrcdirReloaded) Displayed when tools have been reloaded by the
 # 'tools srcdir' command.
+toolsSrcdirReloaded=Aisinas cargadas dempuèi %1$s.
 
 # LOCALIZATION NOTE (toolsSrcdirManual2) A full description of the 'tools srcdir'
 # command. The argument (%1$S) is the browser name.
+toolsSrcdirManual2=Cargar las aisinas de desvolopament de %1$S dempuèi un checkout complet de mozilla-central
 
 # LOCALIZATION NOTE (toolsSrcdirDir) The srcdir argument to the 'tools srcdir' command.
+toolsSrcdirDir=Un checkout de mozilla-central
 
 # LOCALIZATION NOTE (toolsBuiltinDesc) A short description of the 'tools builtin'
 # command, which overrides a previous 'tools srcdir' command.
+toolsBuiltinDesc=Utilizar las aisinas integradas
 
 # LOCALIZATION NOTE (toolsBuiltinDesc) A fuller description of the 'tools builtin'
 # command.
+toolsBuiltinManual=Utilizar las aisinas integradas e anullar las precedentas comandas srcdir
 
 # LOCALIZATION NOTE (toolsBuiltinReloaded) Displayed when tools are loaded with the
 # 'tools builtin' command.
+toolsBuiltinReloaded=Aisinas integradas cargadas.
 
 # LOCALIZATION NOTE (toolsReloadDesc) A short description of the 'tools reload' command.
 # which will reload the tools from the current srcdir.
+toolsReloadDesc=Recargar las aisinas de desvolopament
 
 # LOCALIZATION NOTE (toolsReloaded2) Displayed when tools are reloaded with the 'tools
 # reload' command.
+toolsReloaded2=Aisinas recargadas.
 
 # LOCALIZATION NOTE (cookieDesc) A very short description of the 'cookie'
 # command. See cookieManual for a fuller description of what it does. This
@@ -849,13 +874,16 @@ cookieListOutNone=Pas cap de paramètre
 # LOCALIZATION NOTE (cookieListOutSession) The output of the 'cookie list'
 # command uses this string to describe a cookie with an expiry value of '0'
 # that is to say it is a session cookie
+cookieListOutSession=A la tampadura del navigador (sesilha)
 
 # LOCALIZATION NOTE (cookieListOutNonePage) The output of the 'cookie list'
 # command uses this string for pages like 'about:blank' which can't contain
 # cookies
+cookieListOutNonePage=Cap de cookie pas trobat per aquesta pagina
 
 # LOCALIZATION NOTE (cookieListOutNoneHost) The output of the 'cookie list'
 # command uses this string when there are no cookies on a given web page
+cookieListOutNoneHost=Cap de cookie pas trobat pel domeni %1$S
 
 # LOCALIZATION NOTE (cookieListOutEdit) A title used in the output from the
 # 'cookie list' command on a button which can be used to edit cookie values
@@ -920,14 +948,17 @@ cookieSetSecureDesc=Transmés sonque per https
 # LOCALIZATION NOTE (cookieSetHttpOnlyDesc) A very short string to describe the
 # 'httpOnly' parameter to the 'cookie set' command, which is displayed in a dialog
 # when the user is using this command.
+cookieSetHttpOnlyDesc=Pas accessible dempuèi un escript costat client
 
 # LOCALIZATION NOTE (cookieSetSessionDesc) A very short string to describe the
 # 'session' parameter to the 'cookie set' command, which is displayed in a dialog
 # when the user is using this command.
+cookieSetSessionDesc=Solament valid per la durada de vida de la sesilha del navigador
 
 # LOCALIZATION NOTE (cookieSetExpiresDesc) A very short string to describe the
 # 'expires' parameter to the 'cookie set' command, which is displayed in a dialog
 # when the user is using this command.
+cookieSetExpiresDesc=La data d'expiracion del cookie (RFC2822 entre verguetas o data ISO 8601)
 
 # LOCALIZATION NOTE (jsbDesc) A very short description of the
 # 'jsb' command. This string is designed to be shown in a menu
@@ -1129,52 +1160,68 @@ scratchpadOpenTooltip=Lausa JavaScript
 
 # LOCALIZATION NOTE (paintflashingDesc) A very short string used to describe the
 # function of the "paintflashing" command
+paintflashingDesc=Afichar en susbrilhança las zònas repintradas
 
 # LOCALIZATION NOTE (paintflashingOnDesc) A very short string used to describe the
 # function of the "paintflashing on" command.
+paintflashingOnDesc=Activar la mesa en susbrilhança de las zònas repintradas
 
 # LOCALIZATION NOTE (paintflashingOffDesc) A very short string used to describe the
 # function of the "paintflashing off" command.
+paintflashingOffDesc=Desactivar la mesa en susbrilhança de las zònas repintradas 
 
 # LOCALIZATION NOTE (paintflashingChrome) A very short string used to describe the
 # function of the "paintflashing on/off chrome" command.
+paintflashingChromeDesc=Tramas del chrome
 
 # LOCALIZATION NOTE (paintflashingManual) A longer description describing the
 # set of commands that control paint flashing.
+paintflashingManual=Dessenhar las zònas repintradas amb l'ajuda de diferentas colors
 
 # LOCALIZATION NOTE (paintflashingTooltip) A string displayed as the
 # tooltip of button in devtools toolbox which toggles paint flashing.
+paintflashingTooltip=Afichar en susbrilhança las zònas repintradas
 
 # LOCALIZATION NOTE (paintflashingToggleDesc) A very short string used to describe the
 # function of the "paintflashing toggle" command.
+paintflashingToggleDesc=Activar/Desactivar la mesa en susbrilhança de las zònas repintradas
 
 # LOCALIZATION NOTE (splitconsoleTooltip) A string displayed as the
 # tooltip of button in devtools toolbox which toggles the split webconsole.
+splitconsoleTooltip=Consòla separada
 
 # LOCALIZATION NOTE (appCacheDesc) A very short string used to describe the
 # function of the "appcache" command
+appCacheDesc=Utilitaris de l'escondedor d'aplicacion
 
 # LOCALIZATION NOTE (appCacheValidateDesc) A very short string used to describe
 # the function of the "appcache validate" command.
+appCacheValidateDesc=Validar un manifèste d'escondedor
 
 # LOCALIZATION NOTE (appCacheValidateManual) A fuller description of the
 # 'validate' parameter to the 'appcache' command, displayed when the user asks
 # for help on what it does.
+appCacheValidateManual=Descobrir d'errors dins un manifèste d'escondedor e dins las referéncias als fichièrs
 
 # LOCALIZATION NOTE (appCacheValidateUriDesc) A very short string used to describe
 # the function of the "uri" parameter of the appcache validate" command.
+appCacheValidateUriDesc=URI de verificar
 
 # LOCALIZATION NOTE (appCacheValidated) Displayed by the "appcache validate"
 # command when it has been successfully validated.
+appCacheValidatedSuccessfully=Escondedor d'aplicacion validat amb succès.
 
 # LOCALIZATION NOTE (appCacheClearDesc) A very short string used to describe
 # the function of the "appcache clear" command.
+appCacheClearDesc=Escafar d'entradas de l'escondedor d'aplicacion
 
 # LOCALIZATION NOTE (appCacheClearManual) A fuller description of the
 # 'appcache clear' command, displayed when the user asks for help on what it does.
+appCacheClearManual=Escafar una o mantuna entrada de l'escondedor d'aplicacion
 
 # LOCALIZATION NOTE (appCacheClearCleared) Displayed by the "appcache clear"
 # command when entries are successfully cleared.
+appCacheClearCleared=Entradas escafadas amb succès.
 
 # LOCALIZATION NOTE (AppCacheListDesc) A very short string used to describe
 # the function of the "appcache list" command.
@@ -1184,19 +1231,24 @@ scratchpadOpenTooltip=Lausa JavaScript
 
 # LOCALIZATION NOTE (AppCacheListSearchDesc) A very short string used to describe
 # the function of the "search" parameter of the appcache list" command.
+appCacheListSearchDesc=Filtrar los resultats amb l'ajuda d'un tèrme de recèrca
 
 # LOCALIZATION NOTE (AppCacheList*) Row headers for the 'appcache list' command.
 appCacheListKey=Clau :
 appCacheListDataSize=Talha de las donadas :
 appCacheListDeviceID=ID del periferic :
 appCacheListExpirationTime=Expira lo :
+appCacheListFetchCount=Nombre de consultacions :
+appCacheListLastFetched=Darrièra consultacion :
 appCacheListLastModified=Darrièra modificacion :
 
 # LOCALIZATION NOTE (appCacheListViewEntry) The text for the view entry button
 # of the 'appcache list' command.
+appCacheListViewEntry=Afichar l'entrada
 
 # LOCALIZATION NOTE (appCacheViewEntryDesc) A very short string used to describe
 # the function of the "appcache viewentry" command.
+appCacheViewEntryDesc=Dobrir un novèl onglet que conten las informacions de l'entrada d'escondedor especificada
 
 # LOCALIZATION NOTE (appCacheViewEntryManual) A fuller description of the
 # 'appcache viewentry' command, displayed when the user asks for help on what it
@@ -1204,31 +1256,40 @@ appCacheListLastModified=Darrièra modificacion :
 
 # LOCALIZATION NOTE (appCacheViewEntryKey) A very short string used to describe
 # the function of the "key" parameter of the 'appcache viewentry' command.
+appCacheViewEntryKey=La clau de l'entrada d'afichar.
 
 # LOCALIZATION NOTE (profilerDesc) A very short string used to describe the
 # function of the profiler command.
+profilerDesc=Gerir lo perfilador
 
 # LOCALIZATION NOTE (profilerManual) A longer description describing the
 # set of commands that control the profiler.
+profilerManual=Comandas per aviar o arrestar un perfilador JavaScript
 
 # LOCALIZATION NOTE (profilerOpen) A very short string used to describe the function
 # of the profiler open command.
+profilerOpenDesc=Dobrir lo perfilador
 
 # LOCALIZATION NOTE (profilerClose) A very short string used to describe the function
 # of the profiler close command.
+profilerCloseDesc=Tampar lo perfilador
 
 # LOCALIZATION NOTE (profilerStart) A very short string used to describe the function
 # of the profiler start command.
+profilerStartDesc=Aviar lo perfilatge
 
 # LOCALIZATION NOTE (profilerStartManual) A fuller description of the 'profile name'
 # parameter. This parameter is used to name a newly created profile or to lookup
 # an existing profile by its name.
+profilerStartManual=Nom d'un perfil que desiratz aviar.
 
 # LOCALIZATION NOTE (profilerStop) A very short string used to describe the function
 # of the profiler stop command.
+profilerStopDesc=Arrestar lo perfilatge
 
 # LOCALIZATION NOTE (profilerStopManual) A fuller description of the 'profile name'
 # parameter. This parameter is used to lookup an existing profile by its name.
+profilerStopManual=Nom d'un perfil que volètz arrestar.
 
 # LOCALIZATION NOTE (profilerList) A very short string used to describe the function
 # of the profiler list command.
@@ -1273,16 +1334,25 @@ profilerStopped=Arrestat...
 
 # LOCALIZATION NOTE (listenPortDesc) A very short string used to describe the
 # function of 'port' parameter to the 'listen' command.
+listenPortDesc=Lo pòrt TCP d'escotar
 
 # LOCALIZATION NOTE (listenDisabledOutput) Text of a message output during the
 # execution of the 'listen' command.
+listenDisabledOutput=L'escota es desactivada per la preferéncia devtools.debugger.remote-enabled.
 
 # LOCALIZATION NOTE (listenInitOutput) Text of a message output during the
 # execution of the 'listen' command. %1$S is a port number
+listenInitOutput=Escota del pòrt %1$S
 
 # LOCALIZATION NOTE (listenNoInitOutput) Text of a message output during the
 # execution of the 'listen' command.
+listenNoInitOutput=DebuggerServer es pas inicializat
 
 # LOCALIZATION NOTE (mediaDesc, mediaEmulateDesc, mediaEmulateManual,
 # mediaEmulateType, mediaResetDesc, mediaResetManual) These strings describe
 # the 'media' commands and all available parameters.
+mediaDesc=Emulacion de tipes de mèdias CSS
+mediaEmulateDesc=Emular un tipe de mèdia CSS en particular
+mediaEmulateType=Lo tipe de mèdia d'emular
+mediaResetDesc=Arrestar l'emulacion d'un tipe de mèdia CSS
+mediaResetManual=Arrestar l'emulacion d'un tipe de mèdia CSS
