--- a/browser/chrome/browser/devtools/netmonitor.properties
+++ b/browser/chrome/browser/devtools/netmonitor.properties
@@ -23,39 +23,51 @@ netmonitor.accesskey=N
 # LOCALIZATION NOTE (netmonitor.tooltip):
 # This string is displayed in the tooltip of the tab when the Network Monitor is
 # displayed inside the developer tools window.
+netmonitor.tooltip=Monitor de ret
 
 # LOCALIZATION NOTE (collapseDetailsPane): This is the tooltip for the button
 # that collapses the network details pane in the UI.
+collapseDetailsPane=Amagar los detalhs de la requèsta
 
 # LOCALIZATION NOTE (expandDetailsPane): This is the tooltip for the button
 # that expands the network details pane in the UI.
+expandDetailsPane=Afichar los detalhs de la requèsta
 
 # LOCALIZATION NOTE (headersEmptyText): This is the text displayed in the
 # headers tab of the network details pane when there are no headers available.
+headersEmptyText=Pas cap d'entèsta per aquesta requèsta
 
 # LOCALIZATION NOTE (headersFilterText): This is the text displayed in the
 # headers tab of the network details pane for the filtering input.
+headersFilterText=Filtrar las entèstas
 
 # LOCALIZATION NOTE (cookiesEmptyText): This is the text displayed in the
 # cookies tab of the network details pane when there are no cookies available.
+cookiesEmptyText=Pas cap de cookie per aquesta requèsta
 
 # LOCALIZATION NOTE (cookiesFilterText): This is the text displayed in the
 # cookies tab of the network details pane for the filtering input.
+cookiesFilterText=Filtrar los cookies
 
 # LOCALIZATION NOTE (paramsEmptyText): This is the text displayed in the
 # params tab of the network details pane when there are no params available.
+paramsEmptyText=Pas cap de paramètre per aquesta requèsta
 
 # LOCALIZATION NOTE (paramsFilterText): This is the text displayed in the
 # params tab of the network details pane for the filtering input.
+paramsFilterText=Filtrar los paramètres de la requèsta
 
 # LOCALIZATION NOTE (paramsQueryString): This is the label displayed
 # in the network details params tab identifying the query string.
+paramsQueryString=Cadena de requèsta
 
 # LOCALIZATION NOTE (paramsFormData): This is the label displayed
 # in the network details params tab identifying the form data.
+paramsFormData=Donadas de formulari
 
 # LOCALIZATION NOTE (paramsPostPayload): This is the label displayed
 # in the network details params tab identifying the request payload.
+paramsPostPayload=Transmission de la requèsta
 
 # LOCALIZATION NOTE (requestHeaders): This is the label displayed
 # in the network details headers tab identifying the request headers.
@@ -67,9 +79,11 @@ responseHeaders=Entèstas de la responsa
 
 # LOCALIZATION NOTE (requestCookies): This is the label displayed
 # in the network details params tab identifying the request cookies.
+requestCookies=Cookies de la requèsta
 
 # LOCALIZATION NOTE (responseCookies): This is the label displayed
 # in the network details params tab identifying the response cookies.
+responseCookies=Cookies de la responsa
 
 # LOCALIZATION NOTE (jsonFilterText): This is the text displayed
 # in the response tab of the network details pane for the JSON filtering input.
@@ -81,6 +95,7 @@ jsonScopeName=JSON
 
 # LOCALIZATION NOTE (jsonpScopeName): This is the text displayed
 # in the response tab of the network details pane for a JSONP scope.
+jsonpScopeName=JSONP → callback %S()
 
 # LOCALIZATION NOTE (networkMenu.sortedAsc): This is the tooltip displayed
 # in the network table toolbar, for any column that is sorted ascending.
@@ -92,12 +107,14 @@ networkMenu.sortedDesc=Triada descreissenta
 
 # LOCALIZATION NOTE (networkMenu.empty): This is the label displayed
 # in the network table footer when there are no requests available.
+networkMenu.empty=Pas cap de requèsta
 
 # LOCALIZATION NOTE (networkMenu.summary): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # This label is displayed in the network table footer providing concise
 # information about all requests. Parameters: #1 is the number of requests,
 # #2 is the size, #3 is the number of seconds.
+networkMenu.summary=Una requèsta, #2 Ko, #3 s;#1 requèstas, #2 Ko, #3 s
 
 # LOCALIZATION NOTE (networkMenu.sizeKB): This is the label displayed
 # in the network menu specifying the size of a request (in kilobytes).
@@ -117,6 +134,7 @@ networkMenu.second=%S seg
 
 # LOCALIZATION NOTE (networkMenu.minute): This is the label displayed
 # in the network menu specifying timing interval divisions (in minutes).
+networkMenu.minute=%S min
 
 # LOCALIZATION NOTE (pieChart.empty): This is the label displayed
 # for pie charts (e.g., in the performance analysis view) when there is
@@ -138,18 +156,24 @@ charts.totalS=%S seg
 
 # LOCALIZATION NOTE (charts.cacheEnabled): This is the label displayed
 # in the performance analysis view for "cache enabled" charts.
+charts.cacheEnabled=Amb mesa en escondedor
 
 # LOCALIZATION NOTE (charts.cacheDisabled): This is the label displayed
 # in the performance analysis view for "cache disabled" charts.
+charts.cacheDisabled=Escondedor void
 
 # LOCALIZATION NOTE (charts.totalSize): This is the label displayed
 # in the performance analysis view for total requests size, in kilobytes.
+charts.totalSize=Talha : %S KB
 
 # LOCALIZATION NOTE (charts.totalTime2): This is the label displayed
 # in the performance analysis view for total requests time, in seconds.
+charts.totalTime2=Durada : %S segondas
 
 # LOCALIZATION NOTE (charts.totalCached): This is the label displayed
 # in the performance analysis view for total cached responses.
+charts.totalCached=Responsas mesas en escondedor : %S
 
 # LOCALIZATION NOTE (charts.totalCount): This is the label displayed
 # in the performance analysis view for total requests.
+charts.totalCount=Nombre de requèstas : %S
