--- a/browser/chrome/browser/devtools/profiler.properties
+++ b/browser/chrome/browser/devtools/profiler.properties
@@ -23,6 +23,7 @@ profiler.accesskey=P
 # LOCALIZATION NOTE (profiler.tooltip2):
 # This string is displayed in the tooltip of the tab when the profiler is
 # displayed inside the developer tools window.
+profiler.tooltip2=Perfilador JavaScript
 
 # LOCALIZATION NOTE (profiler.profileName):
 # This string is the default name for new profiles. Its parameter is a number.
@@ -86,14 +87,17 @@ profiler.stateCompleted=Acabada
 # This string is displayed in the profiler sidebar when there are no
 # existing profiles to show (usually happens when the user opens the
 # profiler for the first time).
+profiler.sidebarNotice=I a pas encara cap de perfil.
 
 # LOCALIZATION NOTE (profiler.startProfilerString)
 # This string is displayed on the profiler button when no active
 # profiling sessions are running
+profiler.startProfilerString=Aviar lo perfilatge
 
 # LOCALIZATION NOTE (profiler.stopProfilerString)
 # This string is displayed on the profiler button when an active
 # profiling session is running
+profiler.stopProfilerString=Arrestar lo perfilatge
 
 # LOCALIZATION NOTE (profiler.save)
 # This string is displayed as a label for a button that opens a Save File
