--- a/browser/chrome/browser/devtools/gcli.properties
+++ b/browser/chrome/browser/devtools/gcli.properties
@@ -30,9 +30,12 @@ canonDefaultGroupName=Opcions
 # LOCALIZATION NOTE (canonProxyDesc, canonProxyManual): These commands are
 # used to execute commands on a remote system (using a proxy). Parameters: %S
 # is the name of the remote system.
+canonProxyDesc=Executar una comanda sus %S
+canonProxyManual=Un ensemble de comandas executadas sus un sistèma distant. Lo sistèma distant es atench via %S
 
 # LOCALIZATION NOTE: This error message is displayed when we try to add a new
 # command (using a proxy) where one already exists with the same name.
+canonProxyExists=Una comanda nomenada « %S » existís ja
 
 # LOCALIZATION NOTE: This message describes the '{' command, which allows
 # entry of JavaScript like traditional developer tool command lines.
@@ -48,10 +51,12 @@ cliOptions=Opcions disponiblas
 
 # LOCALIZATION NOTE: The error message when the user types a command that
 # isn't registered
+cliUnknownCommand=Comanda invalida
 
 # LOCALIZATION NOTE: Error message given when a file argument points to a file
 # that does not exist, but should (e.g. for use with File->Open) %1$S is a
 # filename
+fileErrNotExists=« %S » existís pas
 
 # LOCALIZATION NOTE: Error message given when a file argument points to a file
 # that exists, but should not (e.g. for use with File->Save As) %1$S is a
@@ -70,6 +75,7 @@ fileErrIsNotDirectory='%1$S' es pas un fichièr
 # LOCALIZATION NOTE: Error message given when a file argument does not match
 # the specified regular expression %1$S is a filename %2$S is a regular
 # expression
+fileErrDoesntMatch=« %1$S » correspond pas a « %2$S »
 
 # LOCALIZATION NOTE: When a command has a parameter that has a number of
 # pre-defined options the user interface presents these in a drop-down menu,
@@ -186,13 +192,19 @@ subCommandsNone=Pas cap
 # strings are used to describe the 'context' command and its 'prefix'
 # parameter. See localization comment for 'connect' for an explanation about
 # 'prefix'.
+contextDesc=Se concentrar sus un grop de comandas
+contextManual=Definir un prefixe per defaut per las comandas venentas. Per exemple « context git » vos permetrà de picar « commit » a la plaça de « git commit ».
+contextPrefixDesc=Lo prefixe de la comanda
 
 # LOCALIZATION NOTE: This message message displayed during the processing of
 # the 'context' command, when the found command is not a parent command.
+contextNotParentError=Impossible d'utilizar « %S » coma prefixe de comanda perque s'agís pas d'un parent de comanda.
 
 # LOCALIZATION NOTE (contextReply, contextEmptyReply): These messages are
 # displayed during the processing of the 'context' command, to indicate
 # success or that there is no command prefix.
+contextReply=%1$S es d'ara enlà utilizat coma prefixe de comanda
+contextEmptyReply=Cap de prefixe de comanda es pas definit
 
 # LOCALIZATION NOTE (connectDesc, connectManual, connectPrefixDesc,
 # connectPortDesc, connectHostDesc, connectDupReply): These strings describe
@@ -200,23 +212,34 @@ subCommandsNone=Pas cap
 # alias for the remote server (think of it as a "connection name"), and it
 # allows to identify a specific server when connected to multiple remote
 # servers.
+connectDesc=Importar las comandas del servidor
+connectManual=Se connectar al servidor, crear una version locala de las comandas sul servidor. Las comandas distantas possedisson per defaut un prefixe per las diferenciar de las comandas localas — veire la comanda context per contornar l'utilizacion del prefixe.
+connectPrefixDesc=Lo prefixe parent per las comandas importadas
+connectPortDesc=Lo pòrt TCP d'escotar
+connectDupReply=Una connexion nomenada %S existís ja.
 
 # LOCALIZATION NOTE: The output of the 'connect' command, telling the user
 # what it has done. Parameters: %S is the prefix command. See localization
 # comment for 'connect' for an explanation about 'prefix'.
+connectReply=%S comanda(s) aponduda(s).
 
 # LOCALIZATION NOTE (disconnectDesc2, disconnectManual2, disconnectPrefixDesc,
 # disconnectForceDesc): These strings describe the 'disconnect' command and
 # all its available parameters. See localization comment for 'connect' for an
 # explanation about 'prefix'.
+disconnectManual2=Se desconnectar del servidor actualament utilizat per l'execucion de comandas distantas
+disconnectPrefixDesc=Lo prefix parent per las comandas importadas
+disconnectForceDesc=Ignorar las requèstas en cors
 
 # LOCALIZATION NOTE: This is the output of the 'disconnect' command,
 # explaining the user what has been done. Parameters: %S is the number of
 # commands removed.
+disconnectReply=%S comanda(s) suprimida(s).
 
 # LOCALIZATION NOTE: This error message is displayed when the user attempts to
 # disconnect before all requests have completed. Parameters: %S is a list of
 # incomplete requests.
+disconnectOutstanding=Requèstas en cors (%S)
 
 # LOCALIZATION NOTE (prefDesc, prefManual, prefListDesc, prefListManual,
 # prefListSearchDesc, prefListSearchManual, prefShowDesc, prefShowManual,
