--- a/toolkit/chrome/global/devtools/styleinspector.properties
+++ b/toolkit/chrome/global/devtools/styleinspector.properties
@@ -74,12 +74,14 @@ ruleView.contextmenu.copy=Copiar
 
 # LOCALIZATION NOTE (ruleView.contextmenu.showOrigSources): Text displayed in the rule view
 # context menu.
+ruleView.contextmenu.showOrigSources=Afichar las fonts originalas
 
 # LOCALIZATION NOTE (ruleView.contextmenu.showOrigSources.accessKey): Access key for
 # the rule view context menu "Show original sources" entry.
 
 # LOCALIZATION NOTE (ruleView.contextmenu.showCSSSources): Text displayed in the rule view
 # context menu.
+ruleView.contextmenu.showCSSSources=Afichar las fonts CSS
 
 # LOCALIZATION NOTE (ruleView.contextmenu.showCSSSources.accessKey): Access key for
 # the rule view context menu "Show CSS sources" entry.
